@@ -46,6 +46,11 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 <h2>Current News</h2>
 
 <dl>
+<dt>July 22, 2009</dt>
+<dd>Version 3.2.2 has been released and is now available for ftp.
+Octave 3.2.2 is a bug-fixing release
+<a href="NEWS-3.2.html">NEWS</a> file for a list of
+user-visible changes in the 3.2.x series.</dd>
 <dt>June 6, 2009</dt>
 <dd>Version 3.2.0 has been released and is now available for ftp.
 Octave 3.2.0 is a major new release.  See the
